--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^6.6.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2"
   },
