--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@csstools/normalize.css": "github:csstools/normalize.css",
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "firebase": "^6.6.2",
